--- a/virtual_room.html
+++ b/virtual_room.html
@@ -2,4 +2,5 @@
 <html>
     <title>Virtual room</title>
     <!-- Hi from me, myself and I-->
+    <!--Hristo Hristov and Bobi Zlatanov-->  
 </html>
